@@ -1,5 +1,7 @@
 2007-03-12  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/modules/sth.c: remove old ms_acnt pegs
+
 	* doc/man/man8/test-clone.8.man: test updates
 	* doc/man/man8/test-connld.8.man: test updates
 	* doc/man/man8/test-echo.8.man: test updates
